@@ -14,6 +14,12 @@ java {
     }
 }
 
+// Case문 프리뷰
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+    options.release = 17
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -54,7 +60,6 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
-    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
     testImplementation 'com.h2database:h2'
@@ -63,11 +68,10 @@ dependencies {
     testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // QueryDSL 의존성
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta' // JPA 기반 QueryDSL
-    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta' // Q 클래스 생성용
-    annotationProcessor 'jakarta.persistence:jakarta.persistence-api' // JPA 어노테이션용
-    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+    // Querydsl 설정
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 }
 
 tasks.named('test') {
@@ -124,11 +128,7 @@ afterEvaluate {
     }
 }
 
-tasks.check {
-    dependsOn tasks.named("jacocoTestCoverageVerification")
-}
-
-
+// Q객체 생성 위치 경로 지정
 def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
 
 sourceSets {
@@ -140,6 +140,7 @@ sourceSets {
     }
 }
 
-clean {
-    delete file(querydslDir)
+tasks.check {
+    dependsOn tasks.named("jacocoTestCoverageVerification")
 }
+
